    ADDED: option: Panel > General > Layout > Layout
    ADDED: QuickFilter - default shortcut: CTRL+i
    ADDED: option: Panel > View > Show directories first
    ADDED: actions: Back/Forward in history
    ADDED: action: Set Focus to the Panel - shortcut: ESC
    ADDED: actions: Move Focus Up/Down - shortcut: CTRL+SHIFT+Up/Down
    ADDED: selection dialog option: Apply selection to directories
    ADDED: option: Startup > User Interface > Update default panel settings
    ADDED: dbus interface: org.krusader.Instance.openUrl(QString url)
    ADDED: search dialog > feed to listbox:
           search parameters are saved as metadata in the virtual fs
           and displayed in panel's statusbar
    ADDED: filter option: Apply filter to directories
    ADDED: action: view > Apply settings to other tabs
    ADDED: action: view > Save settings as default (for new instances of this view type)
    ADDED: option: Panel > View > Locale aware sorting


    CHANGED: Removed options Panel > General > Status/Totalsbar >
             Statusbar Frame / Statusbar Background / Show Statusbar/ Show Totalsbar.
             They are customizable in layout.xml.
    CHANGED: Use KrView for displaying search results,
             which is much faster than the previously used QTreeWidget.
    CHANGED: Removed default shortcuts for the Left/Right Bookmarks actions,
             as they conflict with the Back/Forward actions.
    CHANGED: After failed refresh, only focus location bar if the url was entered manually.
    CHANGED: Removed default shortcut for 'Cancel Refresh of View'
             as it conflicts with the 'Set Focus to the Panel' action.
             Unless a shortcut is assigned manually,
             ESC cancels the refresh when the panel is focused.
    CHANGED: Konfigurator: "apply" takes effect immediately.
    CHANGED: url commandline argument: if there is already a tab open with that url,
             it is activated, otherwise a new tab is opened in the active panel
