@@ -188,13 +188,14 @@ void KgPanel::setupMiscTab()
     miscGrp = createFrame(i18n("Layout"), tab);
     miscGrid = createGridLayout(miscGrp);
 
-    hbox = new QHBoxLayout();
-
-    hbox->addWidget(new QLabel(i18n("Layout:"), miscGrp));
-
     QStringList layoutNames = KrLayoutFactory::layoutNames();
     int numLayouts = layoutNames.count();
 
+    miscGrid->addWidget(createSpacer(miscGrp), 0, 2);
+
+    QLabel *l = new QLabel(i18n("Layout:"), miscGrp);
+    l->setAlignment(Qt::AlignRight | Qt::AlignVCenter);
+    miscGrid->addWidget(l, 0, 0);
     KONFIGURATOR_NAME_VALUE_PAIR *layouts = new KONFIGURATOR_NAME_VALUE_PAIR[numLayouts];
     for (int i = 0; i != numLayouts; i++) {
         QString text = layoutNames[i];
@@ -203,16 +204,51 @@ void KgPanel::setupMiscTab()
         layouts[ i ].text = text;
         layouts[ i ].value = layoutNames[i];
     }
-
-    cmb = createComboBox("Look&Feel", "Layout", "default",
+    cmb = createComboBox("PanelLayout", "Layout", "default",
                          layouts, numLayouts, miscGrp, true, false, PAGE_MISC);
-
+    miscGrid->addWidget(cmb, 0, 1);
     delete [] layouts;
 
-    hbox->addWidget(cmb);
-    hbox->addWidget(createSpacer(miscGrp));
+    l = new QLabel(i18n("Frame Color:"), miscGrp);
+    l->setAlignment(Qt::AlignRight | Qt::AlignVCenter);
+    miscGrid->addWidget(l, 1, 0);
+    KONFIGURATOR_NAME_VALUE_PAIR frameColor[] = {
+        { i18n("Defined by Layout"), "default" },
+        { i18n("None"), "none" },
+        { i18n("Statusbar"), "Statusbar" }
+    };
+    cmb = createComboBox("PanelLayout", "FrameColor",
+                            "default", frameColor, 3, miscGrp, true, false, PAGE_MISC);
+    miscGrid->addWidget(cmb, 1, 1);
 
-    miscGrid->addLayout(hbox, 1, 0);
+
+    l = new QLabel(i18n("Frame Shape:"), miscGrp);
+    l->setAlignment(Qt::AlignRight | Qt::AlignVCenter);
+    miscGrid->addWidget(l, 2, 0);
+    KONFIGURATOR_NAME_VALUE_PAIR frameShape[] = {
+        { i18n("Defined by Layout"), "default" },
+        { i18n("None"), "NoFrame" },
+        { i18n("Box"), "Box" },
+        { i18n("Panel"), "Panel" },
+    };
+    cmb = createComboBox("PanelLayout", "FrameShape",
+                            "default", frameShape, 4, miscGrp, true, false, PAGE_MISC);
+    miscGrid->addWidget(cmb, 2, 1);
+
+
+    l = new QLabel(i18n("Frame Shadow:"), miscGrp);
+    l->setAlignment(Qt::AlignRight | Qt::AlignVCenter);
+    miscGrid->addWidget(l, 3, 0);
+    KONFIGURATOR_NAME_VALUE_PAIR frameShadow[] = {
+        { i18n("Defined by Layout"), "default" },
+        { i18n("None"), "Plain" },
+        { i18n("Raised"), "Raised" },
+        { i18n("Sunken"), "Sunken" },
+    };
+    cmb = createComboBox("PanelLayout", "FrameShadow",
+                            "default", frameShadow, 4, miscGrp, true, false, PAGE_MISC);
+    miscGrid->addWidget(cmb, 3, 1);
+
     miscLayout->addWidget(miscGrp, 4, 0);
 }
 
