@@ -1,4 +1,5 @@
-    ADDED: option: Panel > General > Layout > Layout
+    ADDED: options: Panel > General > Layout >
+           Layout / Frame Color / Frame Shape / Frame Shadow
     ADDED: QuickFilter - default shortcut: CTRL+i
     ADDED: option: Panel > View > Show directories first
     ADDED: actions: Back/Forward in history
